# axiom-rs

./: .gitignore  .mado.toml  Cargo.toml  README.md  rust-toolchain.toml
crates/axiom-core/: Cargo.toml
crates/axiom-core/src/: canonical.rs  constraint.rs  expression.rs  identifier.rs  infer.rs  join.rs  lib.rs  limit.rs  limits.rs  op.rs  op_enums.rs  order.rs  path.rs  row.rs  schema.rs  source.rs  ty.rs
docs/: ARCHITECTURE.md  DESIGN.md  IDEA.md  README.md
