[workspace]
resolver = "3"
members  = ["crates/axiom-core"]

[workspace.package]
edition      = "2024"
rust-version = "1.94"
license      = "MIT OR Apache-2.0"
authors      = ["Dan Kubb <dan.kubb@gmail.com>"]
repository   = "https://github.com/dkubb/axiom-rs"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery  = { level = "deny", priority = -1 }
cargo    = { level = "deny", priority = -1 }
panic                     = "deny"
todo                      = "deny"
unimplemented             = "deny"
dbg_macro                 = "deny"
print_stdout              = "deny"
print_stderr              = "deny"
mem_forget                = "deny"
exit                      = "deny"
unwrap_used               = "warn"
expect_used               = "warn"
cargo_common_metadata     = "allow"
multiple_crate_versions   = "allow"

[workspace.dependencies]
whittle  = { path = "../whittle" }
proptest = { version = "1", default-features = false, features = ["std"] }
serde    = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
