[package]
name        = "axiom-core"
version     = "0.0.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
description = "Axiom kernel: AST, schema, paths, expressions."

[dependencies]
whittle   = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
